--- a/src/css/product.css
+++ b/src/css/product.css
@@ -1,51 +1,22 @@
-body,a{color: #666666;}
-
 .detail-icons-share,.lay-comment .icon,.lay-meta .row-price .promotion em,.detail-icons ,.icons, .sel-item .sel-mark{background: url(img/icons.png) no-repeat;}
 .kd-btn-collect i,.mod-promise dd a{background: url(img/common.png) no-repeat;}
-
-
-.gonglue {float: left;width: 140px;position: relative;cursor: pointer;}
-.gonglue h2 {font-size: 14px;line-height: 34px;height: 34px;padding-left: 45px;position: relative;cursor: pointer;}
-.nav {float: left;position: relative;}
-.icons-arrows-cate {float: right;position: absolute;top: 12px;right: 0;width: 20px;height: 15px;background:url(img/common.png) no-repeat 0 -222px;opacity: .5;}
-.giftClassify{widows: 860px;z-index: 1000;position: relative;top: -3px;}
-.giftClassify .gift-lm{width: 540px;}
-.giftClassify .gift-lm .cate-item{width: 258px;}
-.giftClassify .cate-cont{width: 540px;}
-.giftClassify .gift-xq{height: 488px;}
-
 
 #main {position: relative;z-index: 100;float: left;margin-left: 31px;}
 .mainCon {margin: 0 auto; width: 1200px;}
 .first-screen {margin-bottom: 30px;}
 .first-screen .goods-main {padding-right: 8px;float: left;padding-top: 35px;width: 972px;}
 .goods-main .goods-data .goods-show {float: left;width: 400px;}
-.kd-img-zoom {
-    width: 400px;
-    height: 400px;
-    border: 1px solid #dedede;
-    overflow: hidden;
-}
-.kd-img-zoom .zoom-link {
-    display: block;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    line-height: 72px;
-}
-.zoomPad {
-    position: relative;
-    float: left;
-    z-index: 99;
-    cursor: crosshair;
-}
 
+/*放大镜*/
+#zoom {width: 400px;height: 400px;border: 1px solid #dedede;overflow: hidden;position: relative;cursor: crosshair;}
+#zoom #zoomPad {display: block;width: 100%;height: 100%;text-align: center;line-height: 72px;position: absolute;top: 0;left: 0;}
+#bigPic{position: absolute;top: 0;left: 0;display: none;}
 
-
+/*小图*/
 .kd-img-slide {margin-top: 20px;overflow: hidden;}
 .zoom-candidate {margin-left: -25px;}
 .zoom-candidate .item {float: left;margin-left: 25px;width: 60px;height: 60px;overflow: hidden;}
-.zoom-candidate .zoomThumbActive {border-color: #666;}
+.zoom-candidate a.zoomThumbActive {border:2px solid #666;}
 .zoom-candidate .zoom-full-img {display: block;position: relative;padding: 1px;width: 54px;height: 54px;text-align: center; border: 2px solid #eaeaea;color: #fff;}
 .zoom-candidate .zoom-full-img img {max-width: 54px;max-height: 54px;}
 .lay-social {position: relative;height: 56px;}
@@ -54,365 +25,99 @@ body,a{color: #666666;}
 .detail-icons-share {background-position: -64px -61px;}
 .detail-icons-fav, .detail-icons-share { width: 12px;height: 14px;}
 .detail-icons {display: inline-block;margin: 0 3px;width: 12px;height: 12px;font-size: 0;line-height: 0;vertical-align: middle;overflow: hidden;}
-/*.goods-main .goods-data .goods-text { padding-left: 20px;}*/
 .goods-main .goods-data .goods-text {float: left;padding-left: 30px;width: 540px;}
-.lay-title {
-    font: 16px/24px "Microsoft YaHei";
-    padding: 0 12px;
-}
 
-.lay-comment {
-    padding: 10px 12px 16px;
-    margin-right: 10px;
-}
-.lay-comment .mod-cont {
-    position: relative;
-    text-indent: 2em;
-    line-height: 180%;
-    color: #666;
-}
-.lay-comment .icon-leftquote {
-    left: 0;
-    top: 0;
-    background-position: 0 -43px;
-}
-.lay-comment .icon-rightquote {
-    right: 0;
-    bottom: 0;
-    background-position: -22px -43px;
-}
-.lay-comment .icon {
-    position: absolute;
-    margin: 0 3px;
-    width: 12px;
-    height: 12px;
-}
-.lay-comment .mod-cont .vm-live {
-    margin: 0 5px;
-}
-.lay-bg {
-    background: url(img/huawen.png) no-repeat;
-    width: 504px;
-    padding: 6px 12px;
-}
-.mod-unit dt {
-    float: left;
-    width: 80px;
-    margin-top: 12px;
-}
-.mod-unit dd {
-    float: left;
-    width: 420px;
-}
-.lay-meta .row-price {
-    font-family: Tahoma,Arial;
-    font-size: 24px;
-    font-weight: bold;
-    color: #e84847;
-}
-.lay-meta .row-price .dollar {
-    font-style: normal;
-    font-family: Arial;
-    font-weight: normal;
-    font-size: 14px;
-}
-.lay-meta .row-price .promotion em.my {
-    background-position: -10px -260px;
-    width: 49px;
-}
-.lay-meta .row-price .promotion em {
-    display: inline-block;
-    height: 18px;
-    vertical-align: middle;
-    margin-right: 2px;
-}
-.lay-meta {
-    margin-right: 10px;
-    padding: 0 12px;
-}
-.lay-meta .mail-addr, .lay-meta .addr-txt {
-    margin: 10px 0;
-}
-.mailAddr .addrDl {
-    position: relative;
-    display: inline;
-    float: left;
-    margin-right: 8px;
-}
-.mailAddr .addrDl dt {
-    cursor: pointer;
-    height: 20px;
-    padding: 0 6px;
-    line-height: 18px;
-    border: 1px solid #dedede;
-    float: none;
-    width: auto;
-    margin-top: 0;
-}
-.mailAddr .addrDl dt i {
-    text-decoration: none;
-    display: inline-block;
-    position: relative;
-    width: 0;
-    height: 0;
-    overflow: hidden;
-    border-color: #606060 transparent transparent;
-    border-width: 4px 4px 0;
-    border-style: solid;
-    margin: 3px 0 3px 6px;
-    vertical-align: middle;
-}
+/*商品说明*/
+.lay-title {font: 16px/24px "Microsoft YaHei";padding: 0 12px;}
+.lay-comment {padding: 10px 12px 16px;margin-right: 10px;}
+.lay-comment .mod-cont {position: relative;text-indent: 2em;line-height: 180%;color: #666;}
+.lay-comment .icon-leftquote {left: 0;top: 0;background-position: 0 -43px;}
+.lay-comment .icon-rightquote {right: 0;bottom: 0; background-position: -22px -43px;}
+.lay-comment .icon {position: absolute;margin: 0 3px;width: 12px;height: 12px;}
+.lay-comment .mod-cont .vm-live {margin: 0 5px;}
+.lay-bg { background: url(img/huawen.png) no-repeat; width: 504px;padding: 6px 12px;}
+.mod-unit dt {float: left;width: 80px;margin-top: 12px;}
+.mod-unit dd {float: left;width: 420px;}
+.lay-meta .row-price { font-family: Tahoma,Arial;font-size: 24px;font-weight: bold;color: #e84847;}
+.lay-meta .row-price .dollar {font-style: normal;font-family: Arial; font-weight: normal;font-size: 14px;}
+.lay-meta .row-price .promotion em.my {background-position: -10px -260px;width: 49px;}
+.lay-meta .row-price .promotion em {display: inline-block;height: 18px;vertical-align: middle;margin-right: 2px;}
+.lay-meta {margin-right: 10px;padding:7px 12px;}
+.lay-meta .mail-addr, .lay-meta .addr-txt {margin: 10px 0;}
+.mailAddr .addrDl {position: relative;display: inline;float: left;margin-right: 8px;}
+.mailAddr .addrDl dt {cursor: pointer;height: 20px;padding: 0 6px;line-height: 18px;border: 1px solid #dedede;float: none;width: auto;margin-top: 0;}
+.mailAddr .addrDl dt i {text-decoration: none;display: inline-block;position: relative;width: 0;height: 0;overflow: hidden;border-color: #606060 transparent transparent;border-width: 4px 4px 0;border-style: solid;margin: 3px 0 3px 6px;vertical-align: middle;}
 /*省*/
-.mailAddr .addrDl dd {
-    display: none;
-    
-    
-    
-    position: absolute;
-    z-index: 10;
-    top: 21px;
-    left: 0;
-    width: 350px;
-    padding: 10px;
-    background-color: #fff;
-    border: 1px solid #dedede;
-}
-.mailAddr .addrDl dd .addrPop-close {
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-.detail-icons-close {
-    background-position: -45px -133px;
-}
-.detail-icons {
-    display: inline-block;
-    margin: 0 3px;
-    width: 12px;
-    height: 12px;
-    font-size: 0;
-    line-height: 0;
-    vertical-align: middle;
-    overflow: hidden;
-}
-.mailAddr .addrDl dd span {
-    float: left;
-    width: 54px;
-    height: 22px;
-    line-height: 22px;
-    overflow: hidden;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-.mailAddr .addrDl dd span a.selected,.mailAddr .addrDl dd span a:hover{    background-color: #ff8e7e;
-    color: #fff;}
-.mailAddr .addrDl dd span a {
-    padding: 0 5px;
-    line-height: 16px;
-    color: #a1a1a1;
-}
-.songh .delivery_info {
-    float: left;
-}
-.lay-data {
-    color: #ccc;
-    margin-top: 24px;
-    border-top: 1px dotted #dedede;
-    border-bottom: 1px dotted #dedede;
-    width: 430px;
-    padding: 15px 10px 15px 84px;
-}
-.lay-data p {
-    color: #666;
-    font-size: 12px;
-    display: inline-block;
-    _zoom: 1;
-    margin: 0 10px;
-}
-.lay-data p span {
-    font-size: 14px;
-}
-.lay-custom {
-    padding: 5px 10px;
-    margin-left: -15px;
-}
-.lay-custom .valid-cont {
-    position: relative;
-    border: 2px solid #fff;
-}
-.lay-custom .mod-unit {
-    padding-left: 15px;
-}
-.lay-custom .custom-sell {
-    margin-top: -2px;
-    overflow: hidden;
-}
-.lay-custom .sel-item {
-    float: left;
-    position: relative;
-    margin-right: 10px;
-    margin-top: 10px;
-    padding: 4px 10px;
-    border: 1px solid #dedede;
-    background-color: #fff;
-    border-radius: 2px;
-    white-space: nowrap;
-    cursor: pointer;
-}
-.lay-custom .sel-item .sel-mark {
-    display: none;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 6px;
-    height: 6px;
-    font-size: 0;
-    line-height: 0;
-    background-position: -25px -81px;
-}
-.sel-item:hover {
-    border-color: #e84847;
-}
-.sel-item.selected{
-    padding: 3px 9px;
-    border: 2px solid #e84847;
-}
-.sel-count {
-    padding-top: 10px;
-}
-.sel-count .vm-control {
-    position: relative;
-    z-index: 1;
-    height: 29px;
-    width: 96px;
-    overflow: hidden;
-    float: left;
-}
-.sel-count .vm-control .minus {
-    left: 0;
-}
-.sel-count .vm-control a {
-    position: absolute;
-    width: 26px;
-    height: 26px;
-    line-height: 26px;
-    background: #f0f0f0;
-    font-size: 14px;
-    text-decoration: none;
-    font-weight: bold;
-    border: 1px solid #dedede;
-    text-align: center;
-}
-.sel-count .vm-control input {
-    width: 38px;
-    height: 22px;
-    position: absolute;
-    z-index: 2;
-    left: 27px;
-    border: 1px solid #dedede;
-    padding: 2px 0;
-    text-align: center;
-    color: #343434;
-}
-.sel-count .vm-control .plus {
-    left: 66px;
-}
-.sel-count .count-tip {
-    color: #999;
-    padding-left: 20px;
-    line-height: 26px;
-}
+.mailAddr .addrDl dd {display: none;position: absolute;z-index: 10;top: 21px;left: 0;width: 350px;padding: 10px;background-color: #fff;border: 1px solid #dedede;}
+.mailAddr .addrDl dd .addrPop-close { position: absolute;right: 0;top: 0;}
+.detail-icons-close {background-position: -45px -133px;}
+.detail-icons {display: inline-block;margin: 0 3px;width: 15px;height: 14px;font-size: 0;line-height: 0;vertical-align: middle;overflow: hidden;}
 
-.lay-buy {
-    padding: 15px 0;
-    margin-right: 10px;
-}
-.main-diy {
-    padding-top: 10px;
-    padding-left: 13px;
-    font-size: 0;
-}.main-diy a {
-    margin-right: 7px;
-}
-.kd-btn-buy {
-    color: #fff;
-    background-color: #F4614C;
-}
-.kd-btn {
-    display: inline-block;
-    padding: 10px 20px;
-    margin-bottom: 0;
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 1.428571429;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    cursor: pointer;
-    background-image: none;
-    border: 1px solid transparent;
-    border-radius: 3px;
-    font-family: 'Hiragino Sans GB','Microsoft YaHei';
-}
-.kd-btn-cart {
-    color: #fff;
-    background-color: #78C9C4;
-}
-.kd-btn-collect {
-    border-color: #ccc;
-    color: #010101;
-    background-color: #f8f8f8;
-}
-.kd-btn-collect i {
-    display: inline-block;
-    width: 13px;
-    height: 11px;
-    background-position: -65px -5px;
-    margin-right: 5px;
-}
-.mod-promise {
-    padding-left: 15px;
-}
-.mod-promise dd {
-    margin-top: 10px;
-}
-.mod-promise dd a.link-real {
-    background-position: -3px -236px;
-}
-.mod-promise dd a {
-    display: inline-block;
-    padding: 2px 0 2px 20px;
-    margin: 0 20px 14px 0;
-}
-.mod-promise dd a.link-return {
-    background-position: -3px -261px;
-}
-.mod-promise dd a.link-baom {
-    background-position: -3px -312px;
-}
+.onair{width: 20px;height: 22px;background: url(img/onair.gif) no-repeat;}
+.mailAddr .addrDl dd span {float: left;width: 54px;height: 22px; line-height: 22px;overflow: hidden;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
+.mailAddr .addrDl dd span a.selected,.mailAddr .addrDl dd span a:hover{background-color: #ff8e7e;color: #fff;}
+.mailAddr .addrDl dd span a { padding: 0 5px;line-height: 16px;color: #a1a1a1;}
+.songh .delivery_info {float: left;}
+.lay-data {color: #ccc;margin-top: 24px; border-top: 1px dotted #dedede;border-bottom: 1px dotted #dedede;width: 430px;padding: 15px 10px 15px 84px;}
+.lay-data p {color: #666;font-size: 12px;display: inline-block;margin: 0 10px;}
+.lay-data p span {font-size: 14px;}
+.lay-meta .row-boss .airlines, .lay-data .row-boss .airlines {cursor: pointer;font-size: 12px;color: #6da4e3;line-height: 22px; display: inline-block;margin: 1px;padding: 0 5px;}
+.lay-meta .row-boss .airlines, .lay-data .row-boss .airlines:hover {text-decoration: none;border: 1px solid #CCC;background-color: #F8F8F8;border-radius: 2px;margin: 0;}
 
+.lay-custom {padding: 5px 10px;margin-left: -15px;}
+.lay-custom .valid-cont {position: relative;border: 2px solid #fff;}
+.lay-custom .mod-unit {padding-left: 15px;}
+.lay-custom .custom-sell {margin-top: -2px;overflow: hidden;}
+.lay-custom .sel-item {float: left; position: relative;margin-right: 10px;margin-top: 10px;padding: 4px 10px;border: 1px solid #dedede;background-color: #fff;border-radius: 2px;white-space: nowrap;cursor: pointer;}
+.lay-custom .sel-item .sel-mark {display: none;position: absolute;right: 0;bottom: 0;width: 6px;height: 6px;font-size: 0;line-height: 0;background-position: -25px -81px;}
+.sel-item:hover {border-color: #e84847;}
+.sel-item.selected{padding: 3px 9px;border: 2px solid #e84847;}
+.sel-count {padding-top: 10px;}
+.sel-count .vm-control {position: relative;z-index: 1;height: 29px;width: 96px;overflow: hidden;float: left;}
+.sel-count .vm-control .minus {left: 0;}
+.sel-count .vm-control a {position: absolute; width: 26px;height: 26px;line-height: 26px;background: #f0f0f0;font-size: 14px;text-decoration: none;font-weight: bold;border: 1px solid #dedede;text-align: center;}
+.sel-count .vm-control input { width: 38px;height: 22px;position: absolute; z-index: 2;left: 27px;border: 1px solid #dedede;padding: 2px 0;text-align: center;color: #343434;}
+.sel-count .vm-control .plus {left: 66px;}
+.sel-count .count-tip {color: #999; padding-left: 20px;line-height: 26px;}
+.lay-buy {padding: 15px 0;margin-right: 10px;}
+.main-diy {padding-top: 10px;padding-left: 13px;font-size: 0;}
+.main-diy a {margin-right: 7px;}
+/*购买按钮*/
+.kd-btn {display: inline-block;padding: 10px 20px;margin-bottom: 0;font-size: 18px;font-weight: normal;line-height: 1.5;text-align: center;white-space: nowrap; vertical-align: middle;cursor: pointer;background-image: none;border: 1px solid transparent;border-radius: 3px; font-family: 'Hiragino Sans GB','Microsoft YaHei';}
+.kd-btn:hover{border: 1px solid #f00;}
+.kd-btn-buy {color: #fff;background-color: #F4614C;}
+.kd-btn-cart {color: #fff;background-color: #78C9C4;}
+.kd-btn-collect {border-color: #ccc;color: #010101;background-color: #f8f8f8;}
+.kd-btn-collect i {display: inline-block;width: 13px;height: 11px;background-position: -65px -5px; margin-right: 5px;}
+.mod-promise {padding-left: 15px;}
+.mod-promise dd {margin-top: 10px;}
+.mod-promise dd a.link-real {background-position: -3px -236px;}
+.mod-promise dd a {display: inline-block;padding: 2px 0 2px 20px;margin: 0 20px 14px 0;}
+.mod-promise dd a.link-return {background-position: -3px -261px;}
+.mod-promise dd a.link-baom {background-position: -3px -312px;}
 
+.sideRight{float: right;}
+.rightLike {font-family: 'Microsoft YaHei';border: 1px solid #dedede;border-top: none;float: right;width: 208px;}
+.rightLike .rightTitle {font-size: 18px; font-weight: bold;margin: 20px 0 10px; padding-left: 20px;color: #f16199;}
+.rightLike .J_move_pic {position: relative;width: 208px;height: 550px;overflow: hidden;}
+.rightLike .J_move_pic li {width: 209px;height: 580px;position: absolute;left: 0;top: 0;opacity: 0;background-color: #fff;}
+.rightLike .J_move_pic div {width: 137px;float: left;display: inline;padding: 10px 35px 0;position: relative;}
+.rightLike .J_move_pic p.imgLike {text-align: center;}
+.rightLike .J_move_pic a img {border: 1px solid #e8e8e8;width: 135px;height: 135px;vertical-align: top;}
+.rightLike .J_move_pic a img:hover{border: 1px solid #f00;}
+.rightLike .J_move_pic p.imgPrice {padding-top: 5px;}
+.rightLike .J_move_pic p.imgPrice span.spanPrice {font-size: 16px;color: #F6614B;font-weight: bold; height: auto;}
+.rightLike .J_move_pic p.imgPrice span.spanPrice s {font-size: 12px;text-decoration: none;}
+.rightLike .pageBtn {text-align: center; padding-bottom: 10px;}
+.rightLike .pageNext, .rightLike .pagePre { display: inline-block;width: 37px;height: 37px;margin: 0 4px; cursor: pointer; background: url(img/pageBtn.png) no-repeat;}
+.rightLike .pagePre {background-position: -1px -1px;}
+.rightLike .pagePre:hover{background-position: -1px -48px;}
+.rightLike .pageNext {background-position: -47px -1px;}
+.rightLike .pageNext:hover{background-position: -47px -48px;}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*重置快速导航栏*/
+#fastNav .wenwo{background-image:none ;}
+#fastNav .olSer{background:url(../img/fast-onair.png) no-repeat;padding-top: 35px;border: 0;}
+#fastNav .olSerSpan{border: 1px solid #ccc;padding: 10px 5px; color: #e84847;}
 
 
