--- a/src/css/index.css
+++ b/src/css/index.css
@@ -72,3 +72,144 @@
 
 
 
+
+/*登录，注册页面*/
+#loginWrap,#signWrap{position: absolute;top: 0;z-index:1000; width: 1263px;
+    height: 7923px;display: none;}
+.loginPop{
+	position: absolute;
+    top: 0px;
+    left: 0px;
+    opacity: 0.2;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+}
+#loginPage,#signPage {
+	font-size: 12px;
+	font-family: "微软雅黑";
+    width: 1150px;
+    height: 590px;
+    position: absolute;
+    z-index: 100;
+    right: -1150px;
+    top: 0;
+    background: #fff;
+    padding-top: 25px;
+}
+.loginCon {
+    overflow: hidden;
+    width: 640px;
+    padding: 50px;
+    margin: 0 auto;
+}
+.loginClose {
+    display: block;
+    width: 40px;
+    height: 40px;
+    background: url(../css/img/closePop.gif) no-repeat center center #E14835;
+    position: absolute;
+    top: 0;
+    left: 0;
+    line-height: 40px;
+    cursor: pointer;
+}
+.loginCon .other-login {
+    float: left;
+    display: inline;
+    overflow: hidden;
+    width: 195px;
+    line-height: 1.5;
+}
+.loginCon .other-login dt{margin-bottom:20px}
+.f18{font-size: 18px;color: #333333;}
+.f14{font-size: 14px;color: #999;}
+.loginCon .other-login dd {
+    float: left;
+    display: inline;
+    margin-right: 17px;
+}
+.loginCon .other-login a{
+    background: url(../css/img/login.png) no-repeat;
+    width: 44px;
+    height: 25px;
+    display: block;
+    padding-top: 44px;
+    color: #333;
+    text-align: center;
+    line-height: 25px;
+}
+.loginCon .other-login a:hover{color: #f00;text-decoration: underline;}
+.loginCon .other-login a.qq {
+    background-position: 0 -68px;
+}
+.loginCon .other-login a.alipay {
+    background-position: 0 -137px;
+}
+.login {
+    float: left;
+    padding-left: 25px;
+    border-left: 1px solid #e8e8e8;
+    width: 320px;
+}
+.loginFrom dl dt {
+    line-height: 20px;
+    height: 20px;
+    margin: 8px 0 30px 0;
+    text-shadow: 1px 1px 0 #FFF;
+}
+.loginFrom dl dd p {
+    height: 20px;
+    line-height: 20px;
+    margin-bottom: 10px;
+    display: block;
+    text-align: right;
+    color: #f46e6e;
+}
+.username,.pwd{
+    font-family: Tahoma;
+    width: 280px;
+    height: 32px;
+    line-height: 32px;
+    background: url(../css/img/login.png) no-repeat transparent;
+    border: solid 1px #D8D8D8;
+    border-radius: 2px;
+    padding: 1px 1px 1px 32px!important;
+    position: relative;
+    z-index: 1200;
+}
+.username {
+    background-position: 7px -203px;
+}
+.pwd {
+    background-position: 7px -238px;
+}
+.codeText{width: 60px; float: left;
+    height: 32px;
+    line-height: 32px;
+    border: solid 1px #D8D8D8;
+    border-radius: 2px;
+    padding: 5px;
+    position: relative;
+    z-index: 1200;
+}
+.code{display: inline-block;width: 80px;height: 30px;border: 1px solid #999;background-color: #FFEBCD;margin:5px 0 10px 20px;line-height: 30px;font-size: 20px;text-align: center;cursor: pointer;}
+.code:hover{border-color: #f00;}
+.login-auto{height: 30px;line-height: 16px;color: #999;margin-top: 10px;}
+.submit {
+    height: 45px;
+    width: 315px;
+    font-size: 18px;
+    background: #F6614B;
+    color: #fff;
+    display: inline-block;
+    border: none;
+    cursor: pointer;
+    border-radius: 2px;
+    font-weight: bold;
+    padding: 0 20px;
+    font-family: "微软雅黑";
+}
+.foget{float: right;}
+.bottom{height: 25px;margin-top: 10px;}
+
