--- a/src/css/product.css
+++ b/src/css/product.css
@@ -76,6 +76,7 @@
 .sel-count .vm-control {position: relative;z-index: 1;height: 29px;width: 96px;overflow: hidden;float: left;}
 .sel-count .vm-control .minus {left: 0;}
 .sel-count .vm-control a {position: absolute; width: 26px;height: 26px;line-height: 26px;background: #f0f0f0;font-size: 14px;text-decoration: none;font-weight: bold;border: 1px solid #dedede;text-align: center;}
+.sel-count .vm-control a:hover{color: #f00;}
 .sel-count .vm-control input { width: 38px;height: 22px;position: absolute; z-index: 2;left: 27px;border: 1px solid #dedede;padding: 2px 0;text-align: center;color: #343434;}
 .sel-count .vm-control .plus {left: 66px;}
 .sel-count .count-tip {color: #999; padding-left: 20px;line-height: 26px;}
