登录注册页面完成

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -162,6 +162,7 @@
     height: 20px;
     line-height: 20px;
     margin-bottom: 10px;
+    padding-top: 10px;
     display: block;
     text-align: right;
     color: #f46e6e;
