--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,11 +1,11 @@
-#bigWrap{background-color: #EDEDED;margin: 0 auto;width:1263px;}
+
 #wrap{width:100%;min-width: 1227px;margin: 0 auto;background-color: #fff;}
 
 /*main*/
-#main{height: 7537px;float: left; margin:25px 0 0 30px;}
+#main{height: 7537px;float: left; }
 
 /*container*/
-#main>.container{height: 1380px;position: relative;}
+#main>.container{height: 1380px;position: relative;margin:25px 0 0 30px;}
 #main .container .nav{width: 150px;margin-right: 20px;float: left;height: 460px;}
 #main .container .nav-hot>a,.nav-gift p{font-size: 16px;font-family: 'Microsoft YaHei';font-weight: bold;margin-bottom: 5px;color: #000;}
 #main .container .hot-links{width: 150px;height: 65px;border-bottom: 1px solid #ededed;padding-bottom: 15px; margin-bottom: 14px;line-height: 1.8;}
@@ -49,10 +49,12 @@
 #main .container .qixi-footer .left{float: left;}
 #main .container .qixi-footer .right{float: right;}
 
-#main .floor-nav{height: 46px;padding: 20px 0 0;position: static;top: 0px;margin: 0 auto;background-color: #fff;width: 100%;}
+#main .floor-nav{height: 46px;padding: 20px 0 0 30px;position: static;top: 0px;margin: 0 auto;background-color: #fff;width: 1230px;}
 #main .floor-nav .floorCon li{width: 128px;height: 46px;text-align: center;float: left;margin-right: 2px;font: 14px/46px "宋体";font-weight: bold;color: #666;cursor: pointer;}
 #main .floor-nav .floorCon li:hover,#main .floor-nav .floorCon .current{background-color: #e44715;color: #fff;}
 
+
+#bigWrap{background-color: #F5F5F5;padding-left:30px ;width: 1230px;}
 #main .floor-main{background-color: #f5f5f5;padding-top: 20px;width: 100%;}
 #main .floor-main .container{width: 1200px;}
 #main .floorBox h3{font: bold 28px/28px "Microsoft YaHei";color: #121212;padding: 15px 0 25px;}
@@ -74,7 +76,7 @@
 
 
 /*登录，注册页面*/
-#loginWrap,#signWrap{position: absolute;top: 0;z-index:1000; width: 1263px;
+#loginWrap,#signWrap{position: fixed;top: 0;z-index:1000; width: 1263px;
     height: 7923px;display: none;}
 .loginPop{
 	position: absolute;
